modules/nasibu/nasibu.h

#define MAX_CANON 255
#define MAX_INPUT 255
#define NAME_MAX 255
#define PATH_MAX 4096
#define PIPE_BUF 4096
#define XATTR_NAME_MAX 255
#define XATTR_SIZE_MAX 65536
#define XATTR_LIST_MAX 65536
#define RTSIG_MAX 32
#define _POSIX_THREAD_KEYS_MAX 128
#define PTHREAD_KEYS_MAX 1024
#define _POSIX_THREAD_DESTRUCTOR_ITERATIONS 4
#define PTHREAD_DESTRUCTOR_ITERATIONS 4
#define _POSIX_THREAD_THREADS_MAX 64
#define AIO_PRIO_DELTA_MAX 20
#define PTHREAD_STACK_MIN 16384
#define DELAYTIMER_MAX 2147483647
#define TTY_NAME_MAX 32
#define LOGIN_NAME_MAX 256
#define HOST_NAME_MAX 64
#define MQ_PRIO_MAX 32768
#define SEM_VALUE_MAX 2147483647
#define _BITS_POSIX2_LIM_H 1
#define _POSIX2_BC_BASE_MAX 99
#define _POSIX2_BC_DIM_MAX 2048
#define _POSIX2_BC_SCALE_MAX 99
#define _POSIX2_BC_STRING_MAX 1000
#define _POSIX2_COLL_WEIGHTS_MAX 2
#define _POSIX2_EXPR_NEST_MAX 32
#define _POSIX2_LINE_MAX 2048
#define _POSIX2_RE_DUP_MAX 255
#define _POSIX2_CHARCLASS_NAME_MAX 14
#define BC_BASE_MAX 99
#define BC_DIM_MAX 2048
#define BC_SCALE_MAX 99
#define BC_STRING_MAX 1000
#define COLL_WEIGHTS_MAX 255
#define EXPR_NEST_MAX 32
#define LINE_MAX 2048
#define CHARCLASS_NAME_MAX 2048
#define RE_DUP_MAX 32767
#define __GNUC_VA_LIST 1
#define _SYS_TYPES_H 1
#define __clock_t_defined 1
#define __clockid_t_defined 1
#define __time_t_defined 1
#define __timer_t_defined 1
#define __BIT_TYPES_DEFINED__ 1
#define _ENDIAN_H 1
#define _BITS_ENDIAN_H 1
#define __LITTLE_ENDIAN 1234
#define __BIG_ENDIAN 4321
#define __PDP_ENDIAN 3412
#define _BITS_ENDIANNESS_H 1
#define __BYTE_ORDER 1234
#define __FLOAT_WORD_ORDER 1234
#define LITTLE_ENDIAN 1234
#define BIG_ENDIAN 4321
#define PDP_ENDIAN 3412
#define BYTE_ORDER 1234
#define _BITS_BYTESWAP_H 1
#define _BITS_UINTN_IDENTITY_H 1
#define _SYS_SELECT_H 1
#define __sigset_t_defined 1
#define __timeval_defined 1
#define _STRUCT_TIMESPEC 1
#define FD_SETSIZE 1024
#define _BITS_PTHREADTYPES_COMMON_H 1
#define _THREAD_SHARED_TYPES_H 1
#define _BITS_PTHREADTYPES_ARCH_H 1
#define __SIZEOF_PTHREAD_MUTEX_T 24
#define __SIZEOF_PTHREAD_ATTR_T 36
#define __SIZEOF_PTHREAD_RWLOCK_T 32
#define __SIZEOF_PTHREAD_BARRIER_T 20
#define __SIZEOF_PTHREAD_MUTEXATTR_T 4
#define __SIZEOF_PTHREAD_COND_T 48
#define __SIZEOF_PTHREAD_CONDATTR_T 4
#define __SIZEOF_PTHREAD_RWLOCKATTR_T 8
#define __SIZEOF_PTHREAD_BARRIERATTR_T 4
#define _THREAD_MUTEX_INTERNAL_H 1
#define __PTHREAD_MUTEX_HAVE_PREV 0
#define __have_pthread_attr_t 1
#define NBITS 32
#define KMALLOC_METADATA_BLOCK_NODE_SIZE 1
#define KMALLOC_HEAPS_COUNT 32
#define SMALL_HEAP_MBS 32
#define SMALL_HEAP_SIZE 32768
#define KMALLOC_FL_MULTI_STEP 2147483648
#define KMALLOC_FL_NO_ACTUAL_ALLOC 1073741824
#define KMALLOC_FL_DMA 536870912
#define KMALLOC_FL_RESV_FLAGS_MASK 268435456
#define KMALLOC_FL_DONT_ACCOUNT 134217728
#define KMALLOC_FL_SUB_BLOCK_MIN_SIZE_MASK 134217727
#define KFREE_FL_MULTI_STEP 2147483648
#define KFREE_FL_NO_ACTUAL_FREE 1073741824
#define KFREE_FL_ALLOW_SPLIT 536870912
typedef long long __intmax_t;
typedef __intmax_t intmax_t;
typedef struct imaxdiv_t {
  long long quot;
  long long rem;
} imaxdiv_t;
typedef unsigned long long __uintmax_t;
typedef __uintmax_t uintmax_t;
typedef int __gwchar_t;
typedef long __time_t;
typedef long __suseconds_t;
typedef long __syscall_slong_t;
typedef struct __sigset_t {
  unsigned long __val[32];
} __sigset_t;
typedef unsigned long ulong;
extern intmax_t imaxabs(intmax_t __n);
extern struct imaxdiv_t imaxdiv(intmax_t __numer, intmax_t __denom);
extern intmax_t strtoimax(const char *__nptr, char **__endptr, int __base);
extern uintmax_t strtoumax(const char *__nptr, char **__endptr, int __base);
extern intmax_t wcstoimax(const __gwchar_t *__nptr, __gwchar_t **__endptr, int __base);
extern uintmax_t wcstoumax(const __gwchar_t *__nptr, __gwchar_t **__endptr, int __base);